src/objects/EnrollmentPlan__c.object
<CustomObject>
    <customHelpPage>INC_HelpRedirect</customHelpPage>
    <description>DTW Enrollment Plans under review by Approvers</description>
    <fields>
        <fullName>ActualContingencyBudgetITD__c</fullName>
        <formula>IncentiveProject__r.ActualContingencyBudgetITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Contingency ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualContingencyBudgetVariance__c</fullName>
        <formula>ActualContingencyBudgetITD__c -  ActualContingencyBudgetatSnapshot__c</formula>
        <label>Actual Contingency Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualContingencyBudgetatSnapshot__c</fullName>
        <label>Actual Contingency at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDPEBudgetITD__c</fullName>
        <formula>IncentiveProject__r.ActualDPEBudgetITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual DPE ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDPEBudgetVariance__c</fullName>
        <formula>ActualDPEBudgetITD__c - ActualDPEBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual DPE Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDPEBudgetatSnapshot__c</fullName>
        <label>Actual DPE at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDirectLaborITD__c</fullName>
        <formula>IncentiveProject__r.AcutalDirectLaborITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Direct Labor ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDirectLaborVariance__c</fullName>
        <formula>ActualDirectLaborITD__c -  ActualDirectLaboratSnapshot__c</formula>
        <label>Actual Direct Labor Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDirectLaboratSnapshot__c</fullName>
        <label>Actual Direct Labor at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualFringeBudgetITD__c</fullName>
        <formula>IncentiveProject__r.ActualFringeBudgetITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Fringe ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualFringeBudgetVariance__c</fullName>
        <formula>ActualFringeBudgetITD__c -  ActualFringeBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Fringe Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualFringeBudgetatSnapshot__c</fullName>
        <label>Actual Fringe at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGMBudgetVariance__c</fullName>
        <formula>ActualGrossMarginITD__c - ActualGMBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Margin Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGMBudgetatSnapshot__c</fullName>
        <label>Actual Gross Margin at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGMofNSRVariance__c</fullName>
        <formula>AcutalGMofNSRITD__c -  ActualGMofNSRatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual GM of NSR Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualGMofNSRatSnapshot__c</fullName>
        <label>Actual GM of NSR % at Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualGrossMarginITD__c</fullName>
        <formula>IncentiveProject__r.ActualGrossMarginITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Margin ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGrossRevenueITD__c</fullName>
        <formula>IncentiveProject__r.ActualGrossRevenueITD__c</formula>
        <label>Actual Gross Revenue ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGrossRevenueVariance__c</fullName>
        <formula>ActualGrossRevenueITD__c -  ActualGrossRevenueatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Gross Revenue Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGrossRevenueatSnapshot__c</fullName>
        <label>Actual Gross Revenue at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualLaborCMatSnapshot__c</fullName>
        <label>Actual Labor CM at Snapshot</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualLaborCostMultiplier_Variance__c</fullName>
        <formula>ActualLaborCostMultiplier__c -  ActualLaborCMatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Labor Cost Multiplier Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualLaborCostMultiplier__c</fullName>
        <formula>IncentiveProject__r.ActualLaborCostMultiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Labor Cost Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualMarginITD__c</fullName>
        <description>Formula field used in triggers and formulas that grabs either the ActualGross or ActualNetMargingITD value.</description>
        <formula>CASE(IncentivePlan__r.ContractSubType__c
,&quot;Gross Margin&quot;,
      IncentiveProject__r.ActualGrossMarginITD__c
,&quot;Net Margin&quot;,
    IncentiveProject__r.ActualNetMarginITD__c, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActualMarginITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNMofNSRITD__c</fullName>
        <formula>IF(AND(NOT(ISNULL(ActualNetMarginITD__c)), ActualNetMarginITD__c &gt; 0),  IF(AND(NOT(ISNULL(NSRBudget__c)), NSRBudget__c &gt; 0), ActualNetMarginITD__c/NSRBudget__c, 0) , 0)

/*ActualNetMarginITD__c / NSRBudget__c*/</formula>
        <label>Actual NM% of NSR ITD</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualNMofNSRVariance__c</fullName>
        <formula>ActualNMofNSRITD__c - ActualNMofNSRatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual NM of NSR Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualNMofNSRatSnapshot__c</fullName>
        <label>Actual NM of NSR at Snapshot</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualNSRBudgetVariance__c</fullName>
        <formula>NSRBudget__c - ActualNSRBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual NSR Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNSRBudgetatSnapshot__c</fullName>
        <label>Actual NSR at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNetMarginITD__c</fullName>
        <formula>IncentiveProject__r.ActualNetMarginITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Net Margin ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNetMarginVariance__c</fullName>
        <formula>ActualNetMarginITD__c -  ActualNetMarginatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Net Margin Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNetMarginatSnapshot__c</fullName>
        <label>Actual Net Margin at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualODCBudgetITD__c</fullName>
        <formula>IncentiveProject__r.ActualODCBudgetITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual ODC ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualODCBudgetVariance__c</fullName>
        <formula>ActualODCBudgetITD__c -  ActualODCBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual ODC Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualODCBudgetatSnapshot__c</fullName>
        <label>Actual ODC at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualOverheadBudgetVariance__c</fullName>
        <formula>ActualOverheadITD__c -  ActualOverheadITDatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Overhead Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualOverheadITD__c</fullName>
        <formula>IncentiveProject__r.ActualOverheadITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Overhead ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualOverheadITDatSnapshot__c</fullName>
        <label>Actual Overhead ITD at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualProjectPercentCompleteVariance__c</fullName>
        <formula>ITDCostCompleteatSnapshot__c -  PercentCompleteCostITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Project % Complete Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualSalaryCostMultiplierVariance__c</fullName>
        <formula>ActualSalaryCostMultiplier__c -  ActualSalaryCostMultiplieratSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Salary Cost Multiplier Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualSalaryCostMultiplier__c</fullName>
        <formula>IncentiveProject__r.ApprovedDirectLaborMultiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Direct Labor Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualSalaryCostMultiplieratSnapshot__c</fullName>
        <label>Actual Salary CM at Snapshot</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualSubsAndODCITD__c</fullName>
        <formula>IncentiveProject__r.ActualSubsBudgetITD__c +  IncentiveProject__r.ActualODCBudgetITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActualSubsAndODCITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSubsBudgetITD__c</fullName>
        <formula>IncentiveProject__r.ActualSubsBudgetITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Subs ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSubsBudgetVariance__c</fullName>
        <formula>ActualSubsBudgetITD__c -  ActualSubsBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Subs Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSubsBudgetatSnapshot__c</fullName>
        <label>Actual Subs at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualTotalCostBudgetVariance__c</fullName>
        <formula>ActualTotalCostITD__c -  ActualTotalCostBudgetatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Total Cost Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualTotalCostBudgetatSnapshot__c</fullName>
        <label>Actual Total Cost at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualTotalCostITD__c</fullName>
        <formula>IncentiveProject__r.ActualTotalCostsITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Total Cost ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcutalGMofNSRITD__c</fullName>
        <formula>CASE(IncentivePlan__r.ContractSubType__c, &quot;Gross Margin&quot;,

IF(IncentiveProject__r.ActualGrossMarginITD__c &gt; 0,
   IF(IncentiveProject__r.ActualNSRITD__c &gt; 0,
      IncentiveProject__r.ActualGrossMarginITD__c/IncentiveProject__r.ActualNSRITD__c, 0)
  ,0)
,&quot;Net Margin&quot;,

IF(IncentiveProject__r.ActualNetMarginITD__c &gt; 0,
   IF(IncentiveProject__r.ActualNSRITD__c &gt; 0,
      IncentiveProject__r.ActualNetMarginITD__c/IncentiveProject__r.ActualNSRITD__c, 0)
  ,0)
,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the Inception to Date (ITD) Margin % of NSR for the project. Compare current project performance to the EAC when setting a DTW baseline. Click (i) To view the ITD financial performance of the project</inlineHelpText>
        <label>ITD Margin % NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AdjustedComplete__c</fullName>
        <description>% complete at enrollment can move forward or backward due to change order impacts
=ITD Cost at enrollment / (EAC cost at enrollment +(Current Cost Budget - Cost Budget at enrollment)) ITD Cost at enrollment, EAC cost at enrollment, Budget cost at enrollment are Ecosystem snapshot values.  Current cost budget is fresh weekly from Insight, This adjusted % complete is the one that defines Estimated Pool, Max Pool, etc.</description>
        <formula>DTWComplete__c</formula>
        <inlineHelpText>A DTW metric used while calculating incentives.  It establishes project % complete @ enrollment.  Budget changes after enrollment are incorporated so that it remains true with respect to changes in scope.</inlineHelpText>
        <label>Adjusted % Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AdminDPEOverride__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Add +/- currency value to adjust the calculated DPE amount for T&amp;M applications</inlineHelpText>
        <label>Admin DPE Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdminNSROverride__c</fullName>
        <inlineHelpText>Add +/- currency value to adjust the calculated NSR amount for T&amp;M applications</inlineHelpText>
        <label>Admin NSR Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgeDays__c</fullName>
        <formula>CASE(EnrollmentStatus__c,
      &quot;Rejected&quot;, 
      (DATEVALUE(LastModifiedDate) - IF( TEXT(LegacyFormCreateDate__c) = &quot;&quot;, DATEVALUE(CreatedDate), LegacyFormCreateDate__c)),
      &quot;Enrolled&quot;, (FormEnrollmentDate__c -
      IF( TEXT(LegacyFormCreateDate__c) = &quot;&quot;, DATEVALUE(CreatedDate), LegacyFormCreateDate__c)),
      NULL
)</formula>
        <inlineHelpText>Total days since the form was initiated</inlineHelpText>
        <label>Form Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AlertBaselineGMNSR__c</fullName>
        <formula>IF( BaselineGMofNSRVariance__c &lt;&gt; 0, IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.Baseline GM% NSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertBaselineNMNSR__c</fullName>
        <formula>IF(BaselineNMofNSRVariance__c &lt;&gt;0, IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.Baseline NM% NSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertBudgetedGMofNSR__c</fullName>
        <formula>IF(ApprovedGrossMarginofNSRVariance__c &lt;&gt; 0, IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.Budgeted GM% of NSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertBudgetedNMofNSR__c</fullName>
        <formula>IF(ApprovedNetMarginofNSRVariance__c &lt;&gt; 0,IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.Budgeted NM% of NSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertDirectPersonnelExpense__c</fullName>
        <formula>IF(ApprovedDPEBudgetVariance__c &lt;&gt; 0, IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.Direct Personnel Expense</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertGMBudget__c</fullName>
        <formula>IF(ApprovedGrossMarginBudgetVariance__c &lt;&gt; 0,IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.GM Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertNMBudget__c</fullName>
        <formula>IF(ApprovedNetMarginBudgetVariance__c &lt;&gt; 0, IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.NM Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertNSRBudget__c</fullName>
        <formula>IF(ApprovedNSRBudgetVariance__c &lt;&gt; 0, IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.NSR Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertProjectComplete__c</fullName>
        <formula>IF( ActualProjectPercentCompleteVariance__c &lt;&gt; 0,
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert.Project % Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppIicationIssues__c</fullName>
        <description>IF( OR(AND(TEXT(MAFlag__c) = &quot;Yes&quot;,TEXT(IsMAComments__c) &lt;&gt; &quot;Yes&quot;), AND(TEXT(IsMAChanged__c) = &quot;Yes&quot;, TEXT(IsMAChangedComments__c) &lt;&gt; &quot;Yes&quot;)) , 
      IMAGE(&quot;/resource/1435520899000/StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Management Adjustment Comments Missing&quot; &amp; BR(), NULL) &amp;</description>
        <formula>CASE(ApplicationType__c, &quot;Pay&quot;, NULL,&quot;OPT&quot;, NULL,
CASE(EnrollmentStatus__c, &quot;Enrolled&quot;, NULL, &quot;Archived&quot;, Null,

   IF( AND(TEXT( InterimPaymentRequested__c ) = &quot;Yes&quot;, CNTofIPSchedules__c &lt; 2,  BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending Approver&quot;)),
   IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Interim Schedule(s) Missing&quot; &amp; BR(), NULL)&amp; 

   IF( AND(BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending Approver&quot;),TEXT( ExceptionFlag__c) = &quot;Yes&quot;,TEXT(IsExceptionComments__c) &lt;&gt; &quot;Yes&quot;, TEXT(IsMAComments__c) &lt;&gt; &quot;Yes&quot;),
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Exception Comments are Missing&quot; &amp; BR(), NULL) &amp;

  IF( AND(TEXT(ConfirmBaseline__c ) &lt;&gt; &quot;Yes&quot;, BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending Approver&quot;)),
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Please Confirm Baseline&quot; &amp; BR(), NULL) &amp;

   IF(OR(NumberofParticipants__c &lt; 1, TotalAllocationParticipants__c &lt; 0.01), 
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Missing Participants or Allocations Too Low&quot; &amp; BR(), NULL) &amp;

   IF( OR(ScoreOnSafetyforLifeMetrics__c = 0, TEXT(ScoreOnSafetyforLifeMetrics__c) = &quot;&quot; ), 
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Score Safety For Life Missing&quot; &amp; BR(), NULL) &amp;

   IF( AND( BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending Approver&quot;), OR(DSOTarget__c = 0, TEXT(DSOTarget__c) = &quot;&quot;)),
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; DSO Target Missing Value&quot; &amp; BR(), NULL) 
   
))</formula>
        <inlineHelpText>STOP signs indicate application cannot continue in workflow until resolved.</inlineHelpText>
        <label>Application Issues</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppNameStatus__c</fullName>
        <description>Reports Only Field</description>
        <formula>ApplicationName__c &amp;&quot; - &quot; &amp; TEXT(EnrollmentStatus__c)</formula>
        <inlineHelpText>Reports Only Field</inlineHelpText>
        <label>App Name - Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_1_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App 1 Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_2_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App 2 Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_3_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App 3 Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationExceptionsFP__c</fullName>
        <description>IF(AND(TotalAllocationParticipants__c &gt; IncentivePlan__r.MaxAllocationPool__c,  ScheduledFinishDate__c &lt; TODAY()+ 120), 
   IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Total Participant Allocations Of &quot;&amp; TEXT(TotalAllocationParticipants__c*100) &amp; &quot;% Exceeds Plan Guidelines Of &quot; &amp;  TEXT(IncentivePlan__r.MaxAllocationPool__c*100) &amp; &quot;%&quot; &amp; BR(),
NULL) &amp;</description>
        <formula>CASE(EnrollmentStatus__c, &quot;Enrolled&quot;, NULL, &quot;Archived&quot;, Null, &quot;Closed&quot;, Null,
CASE(ApplicationType__c,&quot;OPT&quot;,NULL, &quot;Pay&quot;, NULL,

IF(AND(TEXT(IncentivePlan__r.ContractType__c) = &quot;Fixed Price&quot;, TEXT( ApplicationType__c ) &lt;&gt; &quot;Pay&quot;),

IF(OR(ABS(NSRAdjustment__c) &gt; 0,  ABS(DPEAdjustment__c) &gt; 0), 
   IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Management Adjustments Have Been Added&quot; &amp; BR(), NULL),Null
)
))</formula>
        <inlineHelpText>If exceptions are requested, enrollment will require 3rd level approval (typically Region Executive)</inlineHelpText>
        <label>Application Exceptions (FP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationExceptionsPAY__c</fullName>
        <formula>if(text(ApplicationType__c)=&quot;Pay&quot;,

IF(TEXT(IncentiveProject__r.IsClosed__c) &lt;&gt; &quot;Yes&quot;, 
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Project Not Yet Closed&quot; &amp; BR(), NULL) &amp; 

IF( AND(TEXT(PassCSat__c)=&quot;Yes&quot;,TEXT(PassDSO__c)=&quot;Yes&quot;, TEXT(PassSafetyforLife__c)=&quot;Yes&quot;, (ROUND(FinalIncentivePoolAdjusted__c,0) &lt; ROUND(EstimatedIncPoolITD__c,0)) ), 
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; All Ops Metrics Met, Less than 100% of Pool Being Paid&quot; &amp; BR(), NULL)&amp; 

IF( AND(OR(TEXT(PassCSat__c)&lt;&gt;&quot;Yes&quot;,TEXT(PassDSO__c)&lt;&gt;&quot;Yes&quot;, TEXT(PassSafetyforLife__c)&lt;&gt;&quot;Yes&quot;), (FinalIncentivePoolAdjusted__c &gt;= EstimatedIncPoolITD__c) ), 
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Final Pool Not Reduced for Ops Metrics Results&quot; &amp; BR(), NULL) &amp; 

IF( ParticipantNoPayAmount__c &gt; 0, 
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Active Employee with $0 Award&quot; &amp; BR(), NULL),NULL)</formula>
        <inlineHelpText>If exceptions are requested, enrollment will require 3rd level approval (typically Region Executive)</inlineHelpText>
        <label>Application Exceptions (PAY)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationExceptionsTM__c</fullName>
        <formula>CASE(EnrollmentStatus__c, &quot;Enrolled&quot;, NULL, &quot;Archived&quot;, Null, &quot;Closed&quot;, Null, 
CASE(ApplicationType__c,&quot;OPT&quot;,NULL, &quot;Pay&quot;, NULL, 

IF(AND(TEXT(IncentivePlan__r.ContractType__c) = &quot;Time &amp; Material&quot;, NOT(ISPICKVAL( ApplicationType__c, &quot;Pay&quot;))), 
    IF(ABS(Round(BaselineGMofNSR__c,4) -(CASE(IncentivePlan__r.ContractSubType__c, &quot;Gross Margin&quot;, 
    Round(IncentiveProject__r.ApprovedGrossMarginofNSR__c,4), Round(IncentiveProject__r.ApprovedNMofNSR__c,4)))) &gt; 0.0002, 
    IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Baseline Margin% is not equal to Budget Margin%&quot; &amp; 
    BR(), NULL)&amp; 

IF(Round(BaselineGrossMargin__c,0) &lt; (CASE(IncentivePlan__r.ContractSubType__c, &quot;Gross Margin&quot;, 
Round(IncentiveProject__r.ForecastGrossMarginBudget__c,0), 
Round(IncentiveProject__r.ForecastNetMarginBudget__c,0))), 
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Baseline Margin $ &lt; Forecast&quot; &amp; BR(), NULL) &amp; 

IF(Round(BaselineGrossMargin__c,0) &lt; (CASE(IncentivePlan__r.ContractSubType__c, &quot;Gross Margin&quot;, 
Round(IncentiveProject__r.ApprovedGrossMarginBudget__c,0), 
Round(IncentiveProject__r.ApprovedNetMarginBudget__c,0))), 
IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Baseline Margin $ &lt; Budget&quot; &amp; BR(), NULL) 

,NULL) 
))</formula>
        <inlineHelpText>If exceptions are requested, enrollment will require 3rd level approval (typically Region Executive)</inlineHelpText>
        <label>Application Exceptions (TM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationIssues2__c</fullName>
        <formula>CASE(ApplicationType__c, &quot;Pay&quot;, NULL,&quot;OPT&quot;, NULL,
CASE(EnrollmentStatus__c, &quot;Enrolled&quot;, NULL, &quot;Archived&quot;, Null,


  IF(IncentivePlan__c = &quot;&quot;,
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Incentive Plan Missing&quot; &amp; BR(), NULL) &amp;

   IF(AND(BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending Approver&quot;),(TODAY() - EACAsofDate__c &gt; IncentivePlan__r.MaxEACDays__c*1)), 
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; EAC As Of Date Out Of Guidelines&quot; &amp; BR(), NULL) &amp;

   IF( OR( ( IncentiveProject__r.ProjectManager__c )=&quot;&quot;, (IncentiveProject__r.ProjectManager__r.IsActive =FALSE)),
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; PM Is Invalid&quot; &amp; BR(), NULL) &amp;

   IF( OR( Approver1__c=&quot;&quot;, Approver2__c=&quot;&quot;, Approver3__c=&quot;&quot;),
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Ensure Approvers are Valid&quot; &amp; BR(), NULL) &amp;

    IF(AND(Or(BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending Approver&quot;), BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending PM&quot;)),
    TotalAllocationParticipants__c   &gt; 1),
    IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Participant Allocations are greater than 100%&quot; &amp; BR(), NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>STOP signs indicate application cannot continue in workflow until resolved.</inlineHelpText>
        <label>Application Issues 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationIssuesPay__c</fullName>
        <formula>CASE(ApplicationType__c, &quot;Pay&quot;, 

CASE(EnrollmentStatus__c, &quot;Pending Payment&quot;, NULL, &quot;Closed&quot;, Null,

IF( OR(TEXT(FinalIncentivePoolAdjusted__c) = &quot;&quot;, FinalIncentivePoolAdjusted__c &lt; 1), 
IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Populate &apos;Final Pool Adjusted for Ops Metrics&apos;&quot; &amp; BR(), NULL) &amp;

IF( FinalIncentivePoolAdjusted__c &lt;&gt; Round(TotalPaymentAmount__c,0), 
IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Total Payment to Participants Not Equal to Final Pool&quot; &amp; BR(), NULL) &amp;

IF(  EstimatedIncPoolITD__c &lt; 1, 
IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Project Has Not Earned An Incentive Pool&quot; &amp; BR(), NULL)&amp;

IF( ROUND(FinalIncentivePoolAdjusted__c,0) &gt; ROUND(EstimatedIncPoolITD__c,0) , 
IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Final Adjusted Pool Cannot Be &gt; Calculated Pool&quot; &amp; BR(), NULL) &amp;

IF( OR(TEXT(PassCSat__c) = &quot;&quot;,TEXT(PassDSO__c)=&quot;&quot;, TEXT(PassSafetyforLife__c)=&quot;&quot;, ISNULL(FinalClientSatisfaction__c), (FinalScoreonSafetyForLife__c &lt; 0), (FinalITDDSO__c &lt;1) ), 
IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Populate All Ops Metric Results&quot; &amp; BR(), NULL) &amp;

   IF( AND(BEGINS(TEXT(EnrollmentStatus__c), &quot;Pending Approver&quot;),TEXT( ExceptionFlag__c) = &quot;Yes&quot;,TEXT(IsExceptionComments__c) &lt;&gt; &quot;Yes&quot;, TEXT(IsMAComments__c) &lt;&gt; &quot;Yes&quot;),
      IMAGE(&quot;/resource/1435520899000/INC_StopSignImage&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Exception Comments are Missing&quot; &amp; BR(), NULL)


)
,NULL)</formula>
        <inlineHelpText>STOP signs indicate application cannot continue in workflow until resolved.</inlineHelpText>
        <label>Application Issues (Pay)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <formula>HYPERLINK(&quot;https://aecom--ecosysdev.cs15.my.salesforce.com/apex/INC_EnrollmentApp?id=&quot;&amp;Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
</CustomObject>